--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="fr">    <!--Changement de la langue-->
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris,webdesigner,design graphique">
     <meta name="description" content="  Spécialisée dans le web design,avec la chouette agence,donnez à votre entreprise de la visibilité en devenant plus attractif !  ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link  type="text/css" href="./css/bootstrap.css" rel="stylesheet">
+	<link  type="text/css" href="style.css" rel="stylesheet">
+	<link type="text/css" href="./css/font-awesome.css" rel="stylesheet">
+	<link  type="text/css" href="./css/et-line.css" rel="stylesheet">
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
