--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 	<link  type="text/css" href="./css/et-line.css" rel="stylesheet">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/gmaps.min.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	
 
     <title>Accueil la Chouette agence</title>
 
